Time: 54 ms (5.1%), Space: 67.8 MB (5.11%) - LeetHub